2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/aio_cancel.c: Use perfd field not next_fd.

2011-01-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/nfsclient/src/nfs.c: readlink filesystem entry should
	return ssize_t.

2010-12-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos_misc.c: Create short file names acceptable for
	Windows.
	* libfs/src/dosfs/msdos_conv.c: Fixed convertion of half seconds to
	seconds.

2010-12-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_misc.c,
	libfs/src/dosfs/msdos_create.c: Create valid create and modfied date
	and time.

2010-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>
		Jennifer Averett <jennifer.averett@oarcorp.com>

	Add RTEMS Scheduler Simulator.
	* sapi/include/confdefs.h: This adds some simple conditional
	logic to disable portions of the configuration that are NOT supported
	when configuring an RTEMS instance for use with a Scheduler Simulator
	instance. 

2010-12-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libmisc/cpuuse/cpuusagereport.c: We have to take the time since the
	last context switch before the uptime.

2010-12-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/watchdognanoseconds.c: New file.
	* score/Makefile.am: Reflect change above.
	* score/include/rtems/score/watchdog.h, score/src/coretodget.c,
	score/src/coretodgetuptime.c: Do not allow NULL as nanoseconds since
	last tick handler pointer.

2010-12-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/loop.h, libnetworking/net/if_loop.c,
	libnetworking/rtems/rtems_glue.c, libmisc/dummy/dummy-networking.c:
	Initialize loop back interface during normal initialization via
	rtems_bsdnet_initialize_network().

2010-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, posix/src/signal_2.c: sighandler_t is defined